@@ -19,6 +19,8 @@ Version 1.4.0, xxx, 2013 -- Release 1.4
   if a new simulation result contains a different number of support points 
   than the reference result. This is needed if models change variables
   to parameters or vice versa.
+- In development.regressiontest, added the method setSinglePackage.
+  This allows running the regression tests for a single package only.
 
 
 Version 1.3.0, October 24, 2013 -- Release 1.3
